--- a/styles/globals.css
+++ b/styles/globals.css
@@ -551,42 +551,92 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.h-\[92vh\] {
+  height: 92vh;
+}
+
+.h-\[88vh\] {
+  height: 88vh;
+}
+
+.h-\[38px\] {
+  height: 38px;
+}
+
+.w-full {
   width: 100%;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
+.w-\[100px\] {
+  width: 100px;
 }
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
+.flex-1 {
+  flex: 1 1 0%;
 }
 
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
+.cursor-pointer {
+  cursor: pointer;
 }
 
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
+.flex-col {
+  flex-direction: column;
 }
 
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
+.justify-between {
+  justify-content: space-between;
 }
 
-.grid {
-  display: grid;
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 html,
@@ -620,4 +670,24 @@ a {
 
 ::-webkit-scrollbar-track {
   background-color: transparent;
+}
+
+@media (min-width: 768px) {
+  .md\:h-\[30px\] {
+    height: 30px;
+  }
+
+  .md\:w-\[130px\] {
+    width: 130px;
+  }
+
+  .md\:gap-20 {
+    gap: 5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:hover\:overflow-auto:hover {
+    overflow: auto;
+  }
 }
